--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html lang="en">
 
 <head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
   <style>img.lazy{min-height:1px}</style>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,13 +30,16 @@
  <script type="text/javascript">function setREVStartSize(t){try{var h,e=document.getElementById(t.c).parentNode.offsetWidth;if(e=0===e||isNaN(e)?window.innerWidth:e,t.tabw=void 0===t.tabw?0:parseInt(t.tabw),t.thumbw=void 0===t.thumbw?0:parseInt(t.thumbw),t.tabh=void 0===t.tabh?0:parseInt(t.tabh),t.thumbh=void 0===t.thumbh?0:parseInt(t.thumbh),t.tabhide=void 0===t.tabhide?0:parseInt(t.tabhide),t.thumbhide=void 0===t.thumbhide?0:parseInt(t.thumbhide),t.mh=void 0===t.mh||""==t.mh||"auto"===t.mh?0:parseInt(t.mh,0),"fullscreen"===t.layout||"fullscreen"===t.l)h=Math.max(t.mh,window.innerHeight);else{for(var i in t.gw=Array.isArray(t.gw)?t.gw:[t.gw],t.rl)void 0!==t.gw[i]&&0!==t.gw[i]||(t.gw[i]=t.gw[i-1]);for(var i in t.gh=void 0===t.el||""===t.el||Array.isArray(t.el)&&0==t.el.length?t.gh:t.el,t.gh=Array.isArray(t.gh)?t.gh:[t.gh],t.rl)void 0!==t.gh[i]&&0!==t.gh[i]||(t.gh[i]=t.gh[i-1]);var r,a=new Array(t.rl.length),n=0;for(var i in t.tabw=t.tabhide>=e?0:t.tabw,t.thumbw=t.thumbhide>=e?0:t.thumbw,t.tabh=t.tabhide>=e?0:t.tabh,t.thumbh=t.thumbhide>=e?0:t.thumbh,t.rl)a[i]=t.rl[i]<window.innerWidth?0:t.rl[i];for(var i in r=a[0],a)r>a[i]&&0<a[i]&&(r=a[i],n=i);var d=e>t.gw[n]+t.tabw+t.thumbw?1:(e-(t.tabw+t.thumbw))/t.gw[n];h=t.gh[n]*d+(t.tabh+t.thumbh)}void 0===window.rs_init_css&&(window.rs_init_css=document.head.appendChild(document.createElement("style"))),document.getElementById(t.c).height=h,window.rs_init_css.innerHTML+="#"+t.c+"_wrapper { height: "+h+"px }"}catch(t){console.log("Failure at Presize of Slider:"+t)}};</script>
   <style type="text/css" title="dynamic-css" class="options-output">body{font-family:Montserrat}.menu-item{font-family:Oswald}h1,h2,h3,h4,h5,h6{font-family:Oswald}body{color:#5c6873}h1{font-family:"Open Sans";text-transform:none;word-spacing:0;letter-spacing:0;font-weight:400;color:#3f444a;font-size:22px}h2{font-family:"Open Sans";text-transform:none;word-spacing:0;letter-spacing:0;font-weight:400;color:#3f444a;font-size:20px}h3{font-family:"Open Sans";text-transform:none;word-spacing:0;letter-spacing:0;font-weight:400;color:#3f444a;font-size:18px}h4{font-family:"Open Sans";text-transform:none;word-spacing:0;letter-spacing:0;font-weight:400;color:#3f444a;font-size:16px}h5{font-family:"Open Sans";text-transform:none;word-spacing:0;letter-spacing:0;font-weight:400;color:#3f444a;font-size:14px}h6{font-family:"Open Sans";text-transform:none;word-spacing:0;letter-spacing:0;font-weight:400;color:#3f444a;font-size:12px}</style><noscript><style>.wpb_animate_when_almost_visible{opacity:1}</style></noscript>
 
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://unpkg.com/topojson@3"></script>
-  <script src="https://unpkg.com/d3-delaunay@4"></script>
-  <script src="https://unpkg.com/d3-geo-voronoi@1"></script>
+<!--  <script src="https://d3js.org/d3.v5.min.js"></script>-->
+<!--  <script src="https://unpkg.com/topojson@3"></script>-->
+<!--  <script src="https://unpkg.com/d3-delaunay@4"></script>-->
+<!--  <script src="https://unpkg.com/d3-geo-voronoi@1"></script>-->
 
   <link href="brewery.css" rel="stylesheet">
-    <script src="https://www.principallyuncertain.com/brewery/jquery.3.5.1.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v4.js"></script>
+    <!-- <script src="https://d3js.org/d3.v6.min.js"></script> -->
+
+<!--<script src="d3.min.js">></script>-->
 </head>
 
 <body>
@@ -42,14 +47,86 @@
 <header>
 </header>
 <div id="content">
-    <div class="spacer"></div>
-    <h1 id="title" align="center">Big Brewery Board</h1>
+<div id="top-text"><h1 id="title" align="center">Big Brewery Board</h1>
     <p align="center">A list of all breweries in the US with an average beer rating above 3.6/5 and more than 300 ratings</p>
-    <p align="center" class="notes">Last update: 22 September, 2022</p>
-    <div class="spacer"></div>
+    <p align="center">Hover or tap circles to display brewery info.</p>
+    <p align="center">Selecting a state from the dropdown will produce a table of breweries in that state, sorted by average rating.</p>
+    <p align="center" class="notes">Last update: 4 October, 2022</p>
+          <h4 align="center">State: <select id="StateChoice" input="dropdown">
+            <option value="All">All</option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawai'i</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+<!--            <option value="AS">American Samoa</option>-->
+<!--            <option value="GU">Guam</option>-->
+<!--            <option value="MP">Northern Mariana Islands</option>-->
+<!--            <option value="PR">Puerto Rico</option>-->
+<!--            <option value="VI">Virgin Islands</option>-->
+          </select></h4>
 
-<div id="BreweryTable"></div>
-<script type="text/javascript" src="https://www.principallyuncertain.com/brewery/brewery.js"></script>
+<!--<div align="center" class="dropdown">-->
+<!--  <div id="searchbox" class="dropdown-content" style="z-index:100;">-->
+<!--    <datalist id="brewerylist">-->
+<!--    </datalist>-->
+<!--    <input autocomplete="on" list="brewerylist" id="namesearch" placeholder="Brewery Search...">-->
+
+<!--&lt;!&ndash;    <input type="text" placeholder="Brewery Search.." id="NameSearch" onkeyup="filterFunction()">&ndash;&gt;-->
+<!--</div>-->
+<!--  </div>-->
+</div>
+
+          <div id="brewerychart"></div>
+  <div id="results_table"></div>
+<!-- chart container -->
+<script type="text/javascript" src="/brewery/brewery.js"></script>
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <!--<script type="text/javascript" src="/koppen/map/color-stations.js"></script>-->
 
 </body>
